--- a/pages/Perfil.html
+++ b/pages/Perfil.html
@@ -15,7 +15,7 @@
     <nav>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img src="../assets/img/logo lulipets 60x60.png" alt=""></a>
+              <a class="navbar-brand" href="#"><img  data-aos="flip-right" data-aos-duration="800"  src="../assets/img/logo lulipets 60x60.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
