Correcion de posicion

--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -45,32 +45,30 @@
           </nav>
     </nav>
   <div class="Fondo">
-    <header class="container-fluid">
+    <header class="header container-fluid">
       <br>
       <h1 class="text-center">¿Nesecitas ayuda?</h1>
-      <p class="text-center">¡Queremos escucharte! Aquí podras mandar tus preguntas, ideas y sugerencias.</p>
+      <p class="Parrafo text-center">¡Queremos escucharte! Aquí podras mandar tus preguntas, ideas y sugerencias.</p>
     </header>
     <main class="container-fluid">
-      <form class="formulario row my-3 col-12">
-        <div class="mb-3">
+      <form class="formulario d-flex flex-column align-items-center row my-3">
+        <div class="mb-3 col-12 col-sm-10 col-lg-8 col-xl-6">
           <label for="exampleInputNombre" class="form-label">Nombre</label>
           <input type="text" class="form-control" id="Nombre">
         </div>
-        <div class="mb-3">
+        <div class="mb-3 col-12 col-sm-10 col-lg-8 col-xl-6">
           <label for="exampleInputTelefono" class="form-label">Numero de telefono</label>
           <input type="number" class="form-control" id="Telefono">
         </div>
-        <div class="mb-3">
+        <div class="mb-3 col-12 col-sm-10 col-lg-8 col-xl-6">
           <label for="exampleInputEmail1" class="form-label">Email</label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
         </div> 
-        <div class="mb-3">
+        <div class="mb-3 col-12 col-sm-10 col-lg-8 col-xl-6">
           <label for="exampleFormControlComentario" class="form-label">Comentario</label>
           <textarea class="form-control" id="exampleFormControlComentario" rows="3"></textarea>
         </div>
-        <div>
-        <button type="submit" class="btn btn-primary mt-4 col-4 col-lg-3"><img src="../assets/img/mi cuenta.png" alt=""> Enviar</button>
-        </div>
+        <button type="submit" class="btn btn-primary m-3 col-3 col-sm-3 col-lg-3 col-xl-2 d-flex justify-content-center"><img src="../assets/img/mi cuenta.png" alt=""> Enviar</button>
       </form>
     </main>
     <aside>
