--- a/pages/Blog.html
+++ b/pages/Blog.html
@@ -44,21 +44,84 @@
             </div>
           </nav>
     </nav>
-    <header>
-
+    <header class="FondoBlog row d-flex flex-column justify-content-around  align-items-center">
+      <div class="Cabezal d-flex flex-column align-items-center col-11 col-lg-8 col-xl-6">
+        <h2 class="text-center">¡Te presentamos nuestra comunidad de Lulipets!</h2>
+        <p class="text-center">Aqui podras ver todos la información sobre tu mascota. Desde nuestra aplicación podrás agregar información a nuestro blog</p>
+      </div>
+      <div class="circulo d-flex justify-content-center align-items-center col-12 col-lg-10">
+        <button class="Boton"><img src="../assets/img/Blog/perroBlog.png" alt=""></button>
+        <button class="Boton"><img src="../assets/img/Blog/pecesblog.png" alt=""></button>
+        <button class="Boton"><img src="../assets/img/Blog/gatoblog.png" alt=""></button>
+        <button class="Boton"><img src="../assets/img/Blog/pajarosblog.png" alt=""></button>
+        <button class="Boton"><img src="../assets/img/Blog/conejosblog.png" alt=""></button>
+        <button class="Boton"><img src="../assets/img/Blog/otrosblog.png" alt=""></button>
+      </div>
     </header>
-    <main>
-
+    <main class="mainBlog row d-flex justify-content-center">
+      <div class="buscador col-8 d-flex justify-content-between align-items-center my-3 col-lg-4 ">
+        <input type="text" class="buscarTexto" placeholder="Buscar...">
+        <img class="lupa"src="../assets/img/Blog/Buscar.png" alt="">
+      </div>
     </main>
-    <aside>
-
+    <aside class="row d-flex flex-wrap justify-content-center align-items-center">
+      <div class="cards d-flex flex-wrap justify-content-center align-items-center col-12 col-xl-10">
+        <div class="card m-2" style="width: 18rem;">
+          <img src="../assets/img/Blog/Cards/perros sudan.jpg" class="img card-img-top" alt="...">
+          <div class="card-body">
+            <h6 class="card-subtitle mb-2 text-muted">Curiosidades</h6>
+            <h5 class="card-title">La sudoración de los perros: ¿Los perros sudan?</h5>
+            <p class="card-text">Corremos, saltamos, subimos y bajamos, y nuestra mascota nos sigue sin dudarlo. Nosotros, a consecuencia del calor y el esfuerzo, sudamos, ¡y mucho!...</p>
+          </div>
+        </div>
+        <div class="card m-2" style="width: 18rem;">
+          <img src="../assets/img/Blog/Cards/perro adoptado.jpg" class="img card-img-top" alt="...">
+          <div class="card-body">
+            <h6 class="card-subtitle mb-2 text-muted">Consejos</h6>
+            <h5 class="card-title">Prepara la llegada de un perro adoptado al hogar</h5>
+            <p class="card-text">La llegada de un perro adoptado al hogar es un acontecimiento único en la vida de muchas familias. Y es importante saber que esta nueva etapa, va...</p>
+          </div>
+        </div>
+        <div class="card m-2" style="width: 18rem;">
+          <img src="../assets/img/Blog/Cards/perros pulgas.jpg" class="img card-img-top" alt="...">
+          <div class="card-body">
+            <h6 class="card-subtitle mb-2 text-muted">Salud</h6>
+            <h5 class="card-title">Cómo eliminar y prevenir las garrapatas</h5>
+            <p class="card-text">¿Qué son? Las garrapatas son ácaros, considerados parásitos externos que se alimentan de la sangre de animales, como nuestras mascotas...</p>
+          </div>
+        </div>
+        <div class="card m-2" style="width: 18rem;">
+          <img src="../assets/img/Blog/Cards/ACCESORIOS PERROS (2).jpg" class="img card-img-top" alt="...">
+          <div class="card-body">
+            <h6 class="card-subtitle mb-2 text-muted">Accesorios</h6>
+            <h5 class="card-title">10 productos imprescindibles para tu perro</h5>
+            <p class="card-text">Muchos son los artículos que nos entran por los ojos cuando visitamos las tiendas de productos para animales, lo que dificulta que...</p>
+          </div>
+        </div>
+        <div class="card m-2" style="width: 18rem;">
+          <img src="../assets/img/Blog/Cards/perro paseando.jpg" class="img card-img-top" alt="...">
+          <div class="card-body">
+            <h6 class="card-subtitle mb-2 text-muted">Comportamiento</h6>
+            <h5 class="card-title">Pasear con la correa suelta: por qué es mejor y cómo enseñarlo</h5>
+            <p class="card-text">Es esencial para todos los perros hacer ejercicio y tomar aire fresco cada día. Los paseos diarios pueden ayudar a mantener un peso...</p>
+          </div>
+        </div>
+        <div class="card m-2" style="width: 18rem;">
+          <img src="../assets/img/Blog/Cards/abeja-en-el-hocico-de-un-perro (1).jpg" class="img card-img-top" alt="...">
+          <div class="card-body">
+            <h6 class="card-subtitle mb-2 text-muted">Salud</h6>
+            <h5 class="card-title">Picaduras de abejas y avispas</h5>
+            <p class="card-text">Todos los perros son curiosos y les encanta correr y perseguir cosas… insectos incluidos! En la mayoría de los casos, las picaduras de abejas...</p>
+          </div>
+        </div>
+      </div>
     </aside>
     <footer class="footer d-flex justify-content-space-between">
         <div class="logoLulipets">
-            <img src="../assets/img/logo 75x75.png" alt="">
+            <img src="../assets/img/logo 75x75.png" alt="...">
         </div>
         <div class="derechos d-flex align-items-end">
-            <p class="fs-6">©2022 Gastón Sánchez ,todos los derechos reservados</p>
+            <p>©2022 Gastón Sánchez,todos los derechos reservados</p>
         </div>
         <div class="redes d-flex align-items-center">
             <a class="m-1" target="_blank" href="https://www.facebook.com/"><img src="../assets/img/facebook 20x20.png"></a>
