--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -44,13 +44,15 @@
             </div>
           </nav>
     </nav>
-  <div class="Fondo">
-    <header class="header container-fluid">
-      <br>
-      <h1 class="text-center">¿Nesecitas ayuda?</h1>
-      <p class="Parrafo text-center">¡Queremos escucharte! Aquí podras mandar tus preguntas, ideas y sugerencias.</p>
+  <div class="Fondo container-fluid">
+    <header class="header row d-flex flex-column justify-content-around  align-items-center">
+      <div class="d-flex flex-column justify-content-center align-items-center col-11 col-lg-8 col-xl-6">
+        <br>
+        <h2 class="text-center">¿Nesecitas ayuda?</h2>
+        <p class="text-center">¡Queremos escucharte! Aquí podras mandar tus preguntas, ideas y sugerencias.</p>
+      </div>
     </header>
-    <main class="container-fluid">
+    <main>
       <form class="formulario d-flex flex-column align-items-center row my-3">
         <div class="mb-3 col-12 col-sm-10 col-lg-8 col-xl-6">
           <label for="exampleInputNombre" class="form-label">Nombre</label>
@@ -72,7 +74,6 @@
       </form>
     </main>
     <aside>
-
     </aside>
   </div>
     <footer class="footer d-flex justify-content-space-between ">
@@ -80,7 +81,7 @@
             <img src="../assets/img/logo 75x75.png" alt="">
         </div>
         <div class="derechos d-flex align-items-end">
-            <p class="fs-6">©2022 Gastón Sánchez ,todos los derechos reservados</p>
+            <p>©2022 Gastón Sánchez ,todos los derechos reservados</p>
         </div>
         <div class="redes d-flex align-items-center">
             <a class="m-1" target="_blank" href="https://www.facebook.com/"><img src="../assets/img/facebook 20x20.png"></a>
