--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <nav>
-        <nav class="navbar navbar-expand-lg bg-light">
+      <nav class="navbar justify-content-between navbar-expand-lg bg-light">
             <div  class="container-fluid d-flex justify-content-between">
               <a class="navbar-brand" href="#"><img data-aos="flip-right" data-aos-duration="800" src="./assets/img/logo lulipets 60x60.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,8 +41,7 @@
                 </ul>
               </div>
             </div>
-          </nav>
-    </nav>
+        </nav>
     <header>
         <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -121,7 +119,7 @@
             <img src="./assets/img/logo 75x75.png" alt="">
         </div>
         <div class="derechos d-flex align-items-end">
-            <p class="fs-6">©2022 Gastón Sánchez ,todos los derechos reservados</p>
+            <p>©2022 Gastón Sánchez ,todos los derechos reservados</p>
         </div>
         <div class="redes d-flex align-items-center mx-4">
             <a class="m-1" target="_blank" href="https://www.facebook.com/"><img src="./assets/img/facebook 20x20.png"></a>
