--- a/pages/Perfil.html
+++ b/pages/Perfil.html
@@ -58,7 +58,7 @@
             <img src="../assets/img/logo 75x75.png" alt="">
         </div>
         <div class="derechos d-flex align-items-end">
-            <p class="fs-6">©2022 Gastón Sánchez ,todos los derechos reservados</p>
+            <p>©2022 Gastón Sánchez ,todos los derechos reservados</p>
         </div>
         <div class="redes d-flex align-items-center">
             <a class="m-1" target="_blank" href="https://www.facebook.com/"><img src="../assets/img/facebook 20x20.png"></a>
