Agrege animacion a blog

--- a/pages/Blog.html
+++ b/pages/Blog.html
@@ -50,7 +50,7 @@
         <p class="text-center">Aqui podras ver todos la información sobre tu mascota. Desde nuestra aplicación podrás agregar información a nuestro blog</p>
       </div>
       <div class="circulo d-flex justify-content-center align-items-center col-12 col-lg-10">
-        <button class="Boton"><img src="../assets/img/Blog/perroBlog.png" alt=""></button>
+        <button class="Boton"><img src="../assets/img/Blog/perroblog.png" alt=""></button>
         <button class="Boton"><img src="../assets/img/Blog/pecesblog.png" alt=""></button>
         <button class="Boton"><img src="../assets/img/Blog/gatoblog.png" alt=""></button>
         <button class="Boton"><img src="../assets/img/Blog/pajarosblog.png" alt=""></button>
@@ -65,8 +65,8 @@
       </div>
     </main>
     <aside class="row d-flex flex-wrap justify-content-center align-items-center">
-      <div class="cards d-flex flex-wrap justify-content-center align-items-center col-12 col-xl-10">
-        <div class="card m-2" style="width: 18rem;">
+      <div  class="cards d-flex flex-wrap justify-content-center align-items-center col-12 col-xl-10 col-xxl-6">
+        <div data-aos="zoom-in-up" class="card m-2" style="width: 18rem;">
           <img src="../assets/img/Blog/Cards/perros sudan.jpg" class="img card-img-top" alt="...">
           <div class="card-body">
             <h6 class="card-subtitle mb-2 text-muted">Curiosidades</h6>
@@ -74,7 +74,7 @@
             <p class="card-text">Corremos, saltamos, subimos y bajamos, y nuestra mascota nos sigue sin dudarlo. Nosotros, a consecuencia del calor y el esfuerzo, sudamos, ¡y mucho!...</p>
           </div>
         </div>
-        <div class="card m-2" style="width: 18rem;">
+        <div data-aos="zoom-in-up" class="card m-2" style="width: 18rem;">
           <img src="../assets/img/Blog/Cards/perro adoptado.jpg" class="img card-img-top" alt="...">
           <div class="card-body">
             <h6 class="card-subtitle mb-2 text-muted">Consejos</h6>
@@ -82,7 +82,7 @@
             <p class="card-text">La llegada de un perro adoptado al hogar es un acontecimiento único en la vida de muchas familias. Y es importante saber que esta nueva etapa, va...</p>
           </div>
         </div>
-        <div class="card m-2" style="width: 18rem;">
+        <div data-aos="zoom-in-up" class="card m-2" style="width: 18rem;">
           <img src="../assets/img/Blog/Cards/perros pulgas.jpg" class="img card-img-top" alt="...">
           <div class="card-body">
             <h6 class="card-subtitle mb-2 text-muted">Salud</h6>
@@ -90,7 +90,7 @@
             <p class="card-text">¿Qué son? Las garrapatas son ácaros, considerados parásitos externos que se alimentan de la sangre de animales, como nuestras mascotas...</p>
           </div>
         </div>
-        <div class="card m-2" style="width: 18rem;">
+        <div data-aos="zoom-in-up" class="card m-2" style="width: 18rem;">
           <img src="../assets/img/Blog/Cards/ACCESORIOS PERROS (2).jpg" class="img card-img-top" alt="...">
           <div class="card-body">
             <h6 class="card-subtitle mb-2 text-muted">Accesorios</h6>
@@ -98,7 +98,7 @@
             <p class="card-text">Muchos son los artículos que nos entran por los ojos cuando visitamos las tiendas de productos para animales, lo que dificulta que...</p>
           </div>
         </div>
-        <div class="card m-2" style="width: 18rem;">
+        <div data-aos="zoom-in-up" class="card m-2" style="width: 18rem;">
           <img src="../assets/img/Blog/Cards/perro paseando.jpg" class="img card-img-top" alt="...">
           <div class="card-body">
             <h6 class="card-subtitle mb-2 text-muted">Comportamiento</h6>
@@ -106,7 +106,7 @@
             <p class="card-text">Es esencial para todos los perros hacer ejercicio y tomar aire fresco cada día. Los paseos diarios pueden ayudar a mantener un peso...</p>
           </div>
         </div>
-        <div class="card m-2" style="width: 18rem;">
+        <div data-aos="zoom-in-up" class="card m-2" style="width: 18rem;">
           <img src="../assets/img/Blog/Cards/abeja-en-el-hocico-de-un-perro (1).jpg" class="img card-img-top" alt="...">
           <div class="card-body">
             <h6 class="card-subtitle mb-2 text-muted">Salud</h6>
