background boton blog

--- a/pages/Blog.html
+++ b/pages/Blog.html
@@ -50,7 +50,7 @@
         <p class="text-center">Aqui podras ver todos la información sobre tu mascota. Desde nuestra aplicación podrás agregar información a nuestro blog</p>
       </div>
       <div class="circulo d-flex justify-content-center align-items-center col-12 col-lg-10">
-        <button class="Boton"><img src="../assets/img/Blog/perroblog.png" alt=""></button>
+        <button class="Boton1"><img src="../assets/img/Blog/perroblog.png" alt=""></button>
         <button class="Boton"><img src="../assets/img/Blog/pecesblog.png" alt=""></button>
         <button class="Boton"><img src="../assets/img/Blog/gatoblog.png" alt=""></button>
         <button class="Boton"><img src="../assets/img/Blog/pajarosblog.png" alt=""></button>
