--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shorcut icon" href="./assets/img/logo lulipets 60x60.png">
-    <title>Lulipets</title>
+    <title>Lulipets | APP de mascotas</title>
+    <meta name="description" content="Controlá y recordá vacunaciones, desparasitaciones, alergias y turnos veterinarios de sus mascotas. Como así localizá las clínicas veterinarias más cercanas y mejor valoradas.">
+    <meta name="keywords" content="mascotas, aplicacion, veterinarias cercanas, aplicación de perros">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -65,12 +67,18 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/img/carrusel/little-young-dog-posing-cheerful (1).jpg" class="d-block w-100" alt="...">
+                <img src="./assets/img/carrusel/foto 3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h3>¡Somos Lulipets!</h3>
                   <p>Una aplicación fácil, dinámica e intuitiva en la que podamos controlar vacunaciones, desparasitaciones, alergias y turnos veterinarios de nuestras mascotas. Como así localizar las clínicas veterinarias más cercanas y mejor valoradas.</p>
                 </div>
               </div>
+              <div class="carousel-item">
+                <img src="./assets/img/carrusel/Foto 4.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h3>¡Somos Lulipets!</h3>
+                  <p>Una aplicación fácil, dinámica e intuitiva en la que podamos controlar vacunaciones, desparasitaciones, alergias y turnos veterinarios de nuestras mascotas. Como así localizar las clínicas veterinarias más cercanas y mejor valoradas.</p>
+                </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
