--- a/pages/Blog.html
+++ b/pages/Blog.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shorcut icon" href="../assets/img/logo lulipets 60x60.png">
-    <title>Blog|Lulipets</title>
+    <title>Blog | Lulipets</title>
+    <meta name="description" content="¿Quieres saber todo sobre tu mascota? En nuestro blog podrás encontrar toda la info sobre tu mascota!">
+    <meta name="keywords" content="blog, mascotas, salud, comportamiento, consejos, accesorios">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
