--- a/pages/Afiliados.html
+++ b/pages/Afiliados.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shorcut icon" href="../assets/img/logo lulipets 60x60.png">
     <title>Afiliados|Lulipets</title>
+    <meta name="description" content="Estos son nuestros afiliados que nos ayudan a crecer">
+    <meta name="keywords" content="afiliados,mascotas">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -44,14 +46,96 @@
             </div>
           </nav>
     </nav>
-    <header>
+    <header class="HeaderAfiliados row d-flex flex-column align-items-center justify-content-around ">
+      <div class="d-flex flex-column align-items-center justify-content-center my-1 col-10 col-lg-6 ">
+        <h1>Afiliados de Lulipets</h1>
+        <p>Aquí podras ver las veterinarias que nos eligieron y nos siguen eligiendo día a día.¡Podes ser parte de nosotros, sumate!</p>
+      </div>
+      <div class="buscador d-flex justify-content-between align-items-center my-5 col-8 col-lg-6 col-xl-5 ">
+        <input type="text" class="buscarTexto" placeholder="Buscar...">
+        <img class="lupa"src="../assets/img/Blog/Buscar.png" alt="">
+      </div>
 
     </header>
-    <main>
-
+    <main class="main row d-flex justify-content-center align-items-around">
+      <div class="Filtros d-flex justify-content-center align-items-around my-3 col-11">
+        <button class="Filtro1">Córdoba</button>
+        <button class="Filtro">Buenos Aires</button>
+        <button class="Filtro">Santa Fe</button>
+        <button class="Filtro">Mendoza</button>
+        <button class="Filtro">Corrientes</button>
+      </div>
     </main>
     <aside>
-
+      <div class="tarjetasAfiliado row d-flex flex-wrap justify-content-center align-items-center ">
+          <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-7 col-lg-6 col-xl-5">
+            <div class="imgA mx-3 my-5">
+                <img src="../assets/img/afiliados/glee pet market 1.jpg" alt="">
+            </div>
+            <div class="CardContent my-1">
+              <h5>Glee Pet Market</h3>
+              <p>En Glee Pet Veterinaria & Pet Shop seleccionamos los mejores profesionales veterinarios, quienes continúan en capacitación y formación constante, para darle la más cálida y profesional atención a tu mascota.</p>
+            </div>
+          </div>  
+          <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-7 col-lg-6 col-xl-5">
+            <div class="imgA mx-3 my-5">
+                  <img class="imgA" src="../assets/img/afiliados/chocos.jpg" alt="">
+            </div>
+            <div class="CardContent my-1">
+                <h5>Chocos</h3>
+                <p>Un verdadero sanatorio para mascotas, con guardias permanentes, con todas las especialidades médicas, con profesionales capacitados. En un sólo complejo todo lo que su mascota necesita.</p>
+            </div>
+          </div>
+          <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-7 col-lg-6 col-xl-5">
+            <div class="imgA mx-3 my-4">
+                <img class="imgA" src="../assets/img/afiliados/veterinaria Alem 1.svg" alt="">
+            </div>
+            <div class="CardContent my-3">
+              <h5>Veterinaría Alem</h3>
+              <p>Atención medica clínica, internaciones, cirugías, farmacia, urgencias. Trabajo en equipo. Experiencia.</p>
+              </div>
+          </div>  
+          <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-7 col-lg-6 col-xl-5">
+            <div class="imgA mx-3 my-4">
+              <img class="imgA" src="../assets/img/afiliados/veteri9naria kanus 1.svg" alt="">
+            </div>
+            <div class="CardContent my-3">
+              <h5>Kanus</h3>
+              <p>Kanus es una veterinaria 24hrs. Nos encargamos del cuidado de tu mascota</p>
+            </div>
+          </div>        
+          <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-7 col-lg-6 col-xl-5">
+            <div class="imgA mx-3 my-5">
+              <img class="imgA" src="../assets/img/afiliados/mundo bicho 1.svg" alt="">
+            </div>
+            <div class="CardContent my-3">
+              <h5>Mundo Bicho</h3>
+              <p>Atención Veterinarias de animales de compañia no convencionales, animales silvestres y exoticos. Reptiles, Pequeños mamíferos, Aves, Perros y Gatos.</p>
+            </div>
+          </div>      
+          <div data-aos="zoom-in-up" class="tarjetaAfiliado d-flex  justify-content-center align-items-center m-4 col-10 col-md-7 col-lg-6 col-xl-5">
+            <div class="imgA mx-3 my-5">
+              <img class="imgA" src="../assets/img/afiliados/pixis 1.svg" alt="">
+            </div>
+            <div class="CardContent my-3">
+              <h5>Veterinaria Pixies</h3>
+              <p>💉consultorio 👩🏼‍⚕️cirugía e internación 🛁 peluquería 🏠 guardería canina y felina 🍗 balanceados y accesorios 💚🐶🐱❤️</p>
+            </div>
+        </div> 
+      </div>
+      <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center my-3">
+          <li class="page-item disabled">
+            <a class="page-link"> Atras </a>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item">
+            <a class="page-link" href="#">Siguiente</a>
+          </li>
+        </ul>
+      </nav>
     </aside>
     <footer class="footer d-flex justify-content-space-between">
         <div class="logoLulipets">
