--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -46,7 +46,7 @@
             </div>
           </nav>
     </nav>
-  <div class="Fondo container-fluid">
+  <div class="FondoContacto container-fluid">
     <header class="header row d-flex flex-column justify-content-around  align-items-center">
       <div class="d-flex flex-column justify-content-center align-items-center col-11 col-lg-8 col-xl-6">
         <br>
