--- a/index.html
+++ b/index.html
@@ -49,50 +49,52 @@
       </nav>
     </nav>
     <header>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
                 <img src="./assets/img/carrusel/foto 1.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption ">
                   <h1>¡Somos Lulipets!</h1>
                   <p>Una aplicación fácil, dinámica e intuitiva en la que podamos controlar vacunaciones, desparasitaciones, alergias y turnos veterinarios de nuestras mascotas. Como así localizar las clínicas veterinarias más cercanas y mejor valoradas.</p>
                 </div>
               </div>
               <div class="carousel-item" data-bs-interval="2000">
                 <img src="./assets/img/carrusel/foto 2.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption">
                   <h1>¡Somos Lulipets!</h1>
                   <p>Una aplicación fácil, dinámica e intuitiva en la que podamos controlar vacunaciones, desparasitaciones, alergias y turnos veterinarios de nuestras mascotas. Como así localizar las clínicas veterinarias más cercanas y mejor valoradas.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="./assets/img/carrusel/foto 3.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption">
                   <h1>¡Somos Lulipets!</h1>
                   <p>Una aplicación fácil, dinámica e intuitiva en la que podamos controlar vacunaciones, desparasitaciones, alergias y turnos veterinarios de nuestras mascotas. Como así localizar las clínicas veterinarias más cercanas y mejor valoradas.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="./assets/img/carrusel/Foto 4.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h3>¡Somos Lulipets!</h3>
+                <div class="carousel-caption">
+                  <h1>¡Somos Lulipets!</h1>
                   <p>Una aplicación fácil, dinámica e intuitiva en la que podamos controlar vacunaciones, desparasitaciones, alergias y turnos veterinarios de nuestras mascotas. Como así localizar las clínicas veterinarias más cercanas y mejor valoradas.</p>
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
+              <span class="visually-hidden">anterior</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
+              <span class="visually-hidden">siguiente</span>
             </button>
           </div>
+      </div>
     </header>
     <main class="container-fluid">
       <div class="tarjetas row d-flex flex-wrap justify-content-between align-items-center m-4">
