--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -74,7 +74,7 @@
           <label for="exampleFormControlComentario" class="form-label">Comentario</label>
           <textarea class="form-control" id="exampleFormControlComentario" rows="3"></textarea>
         </div>
-        <button type="submit" class="btn m-3 col-3 col-sm-3 col-lg-3 col-xl-2 d-flex justify-content-center" style="background-color: #081920;"><img class="imagen" src="../assets/img/mi cuenta.png" alt=""> Enviar</button>
+        <button type="submit" class="btn mb-3 col-5  d-flex justify-content-center" style="background-color: #FFE9BC;"><img class="imagen" src="../assets/img/mi cuenta.png" alt=""> Enviar</button>
       </form>
     </main>
     <aside>
