--- a/pages/Mi cuenta.html
+++ b/pages/Mi cuenta.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shorcut icon" href="../assets/img/logo lulipets 60x60.png">
     <title>Mi Cuenta | Lulipets</title>
+    <meta name="description" content="¡Ingresa a tu cuenta de Lulipets! Inicia sesión y conoce todos los beneficios de nuestra familia.">
+    <meta name="keywords" content="Cuenta, sesion, cuenta, lulipets">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -46,13 +48,38 @@
         </div>
       </nav>
     </nav>
-  <div class="div container-fluid">
-    <header>
-      <h1>cuenta</h1>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi eligendi architecto possimus vel ullam totam ad quibusdam beatae. Quis dolore voluptatum expedita velit sunt necessitatibus, recusandae repudiandae perspiciatis incidunt veniam?</p>
+  <div class="FondoC container-fluid">
+    <header class="headerCuenta d-flex flex-column align-items-center ">
+      <h1 class="tituloCuenta my-3">Iniciar sesión</h1>
+      <p class="subtituloCuenta mt-1">¿No tienes una cuenta?<a class="enlace ms-1" href="">Regístrate.</a></p>
     </header>
-    <main>
-
+    <main class="">
+      <form class="formulario d-flex flex-column align-items-center mb-4">
+        <div class="Sesion mb-3 col-11 col-md-10 col-lg-8 col-xl-6 col-xxl-4">
+          <label for="exampleInputEmail1" class="form-label">Email</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        </div>
+        <div class="mb-3 col-11 col-md-10 col-lg-8 col-xl-6 col-xxl-4">
+          <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+          <input type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="mb-3 form-check col-10 col-md-9 col-lg-7 col-xl-5 col-xxl-3">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Recúerdame</label>
+        </div>
+        <div class="d-flex justify-content-end m-1 col-11 col-md-10 col-lg-8 col-xl-6 col-xxl-4">
+          <a class="enlace" href="">¿Olvidaste tu email o contraseña?</a>
+        </div>
+        <button type="submit" class="btn mt-3 col-9 col-md-7 col-lg-5 col-xl-4 col-xxl-3" style="background-color: #FFE9BC;">Iniciar sesión</button>
+      </form>
+        <hr class="me-5 ms-5">
+      <div class="redes d-flex justify-content-center align-items-center mb-3">
+        <p class="fs-5 m-3 me-5">O conéctate con</p>
+        <div>
+          <img class="m-2 ms-5"src="../assets/img/MiCuenta/googlew.png" alt="">
+          <img class="m-1" src="../assets/img/MiCuenta/facebook.png" alt="">
+        </div>
+      </div>
     </main>
     <aside>
 
