--- a/pages/Mi cuenta.html
+++ b/pages/Mi cuenta.html
@@ -72,7 +72,7 @@
         </div>
         <button type="submit" class="btn mt-3 col-9 col-md-7 col-lg-5 col-xl-4 col-xxl-3" style="background-color: #FFE9BC;">Iniciar sesión</button>
       </form>
-        <hr class="me-5 ms-5">
+        <hr class="linea me-5 ms-5">
       <div class="redes d-flex justify-content-center align-items-center mb-3">
         <p class="fs-5 m-3 me-5">O conéctate con</p>
         <div>
@@ -84,7 +84,9 @@
     <aside>
 
     </aside>
-    <footer class="foter row">
+  </div>
+  
+    <footer class="foter">
       <div class="footer d-flex justify-content-between ">
         <div class="logoLulipets mx-3">
             <img src="../assets/img/logo 75x75.png" alt="">
